{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "standard",
            "id": "be71e5ca-1bae-4b8b-b6c8-b0718b5e0f86",
            "actions": [
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "cd6118d9-14f6-4857-b013-7a8fc03160bb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "22ab1ef9-1ec9-40cc-aaaa-cfd278851d0b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Trigger1",
                    "type": "Button",
                    "id": "0d161803-3629-4b58-8471-3a5567719c44",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Trigger2",
                    "type": "Button",
                    "id": "974b303a-f6c2-462e-947b-95a3031df985",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MouseVelocity",
                    "type": "Value",
                    "id": "e215967f-9178-44f3-86bf-6828b4499117",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ToggleInventory",
                    "type": "Button",
                    "id": "c5484d14-7d3e-44cd-b87b-47d7d42b1be8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "keyboard",
                    "id": "a920ea16-8db2-4f36-93bf-4dc9a710c682",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "4be653d8-4ed4-4d61-bfc6-861f22d5344b",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "77b03560-51b8-4cf1-aa2d-1031fd42eac8",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "35c44ba6-d350-4d32-887f-4c8e38fe5b25",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6f8946b3-1a45-4fc0-94c0-16f480d0d030",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Trigger1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ff5def25-bdc4-4444-93a4-5131b33d376f",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Trigger2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "80d9a282-f3cf-4d43-9ccf-1c702a6e051e",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseVelocity",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "58c8a5dc-10a2-42a4-b31b-29e847f73184",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "debug",
            "id": "d888c831-3c05-4104-ab88-334c7f83936e",
            "actions": [
                {
                    "name": "ToggleDC",
                    "type": "Button",
                    "id": "13de6e74-ef97-4d1b-a407-18f13a7d5ded",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Enter",
                    "type": "Button",
                    "id": "9da63e62-62fe-4a7e-8127-2148379e9734",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "AnyKey",
                    "type": "Button",
                    "id": "03a54a88-7fa5-426e-8692-e9d716d847da",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "025f160e-eee3-4ed2-8299-9ce17e468ff0",
                    "path": "<Keyboard>/slash",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleDC",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e5c02e71-0866-4533-a531-e99695f151ae",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Enter",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "30b29de2-445c-41fa-a00f-0978f074bdf8",
                    "path": "<Keyboard>/anyKey",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AnyKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}